dh-python (1.20130809-1) UNRELEASED; urgency=low

  * Do not translate X-Python{,3}-Version into Depends if there are no Python
    files in the package

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 09 Aug 2013 15:55:11 +0200

dh-python (1.20130807-1) unstable; urgency=low

  * dh_python3: do not add multiarch triplets in python3.2's extensions -
    multiarch support was disabled in this interpreter
  * dh_pypy: fix prerm script to remove .pyc files (thanks to Jakub Wilk)
  * pybuild:
    - rename PYBUILD_DEBUG env. var. to PYBUILD_VERBOSE
    - run `pypy -m unittest discover -v` in test target for pypy interpreter
    - add --test-nose and --test-pytest options (can be enabled also via
      PYBUILD_TEST_NOSE=1 or PYBUILD_TEST_PYTEST=1)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 07 Aug 2013 23:59:37 +0200

dh-python (1.20130728-1) unstable; urgency=low

  * Upload to unstable, breaks/replaces python3 << 3.3.2-4~
  * Ignore missing or broken /usr/share/python{,3}/debian_defaults config
    files while checking for default/supported Python {2,3} versions
  * dh_python3: fix renaming (tagging) non-default public extensions that were
    not installed directly in dist-packages/ (../dist-packages/foo/bar.so, etc.)

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 31 Jul 2013 22:13:05 +0200

dh-python (1.0~b1-1) experimental; urgency=low

  * Initial release.

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 07 Jul 2013 21:47:50 +0200